--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,11 @@
 upstream tornado {
     server 127.0.0.1:8080;
+    # server 127.0.0.1:8081;
 }
 
 server {
     listen 80;
-    server_name www.tornado.cn;
+    server_name www.tornado.com;
     client_max_body_size 20M;
 
     location / {
