--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ swagger-spec-validator==2.4.3
 urllib3==1.24.2
 six==1.12.0
 requests==2.21.0
+requests-toolbelt==0.9.1
 pyotp==2.3.0
 chardet==3.0.4
 crypto==1.4.1
